@@ -1865,4 +1865,18 @@ $wgFilterRobotsWL = false;
  */
 $wgAllowCategorizedRecentChanges = false ;
 
+/**
+ * Number of jobs to perform per request. May be less than one in which case
+ * jobs are performed probabalistically. If this is zero, jobs will not be done
+ * during ordinary apache requests. In this case, maintenance/doJobs.php should 
+ * be run periodically.
+ */
+$wgJobRunRate = 1;
+
+/**
+ * Log file for job execution
+ */
+$wgJobLogFile = false;
+
+
 ?>
