@@ -65,6 +65,9 @@ Database:
 * Respect database prefix in dumpHTML.inc
 * Removed read-only check from Database::query()
 * Added externallinks table, to track links to arbitrary URLs
+* Added job table, for deferred processing of jobs. The immediate application is 
+  to complete the link table refresh operation when templates are changed.
+
 
 Documentation:
 * (bug 3306) Document $wgLocalTZoffset
